[package]
name = "serde_spaniel"
version = "0.2.0"
authors = ["Robin KAY <komadori@gekkou.co.uk>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Spaniel Interactive Deserialiser for Serde"
readme = "README.md"
homepage = "https://github.com/komadori/serde_spaniel"
repository = "https://github.com/komadori/serde_spaniel"
keywords = ["serde", "interactive", "console", "terminal"]

[features]
default = ["stdio", "rustyline", "u8i8_variants"]
stdio = []
u8i8_variants = []

[dependencies]
serde = "1.0"
rustyline = { version = "8.0", optional = true}

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
